--- a/design/styles.css
+++ b/design/styles.css
@@ -357,16 +357,16 @@ section, main, footer {
 }
 
 .services__card:nth-child(1) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/images/homepage/softwareDeveloper.png');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/softwareDeveloper.png');
 }
 .services__card:nth-child(2) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/images/homepage/UniversityOfAlabama.png');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/UniversityOfAlabama.png');
 }
 .services__card:nth-child(3) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/images/homepage/Experiences.png');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/Experiences.png');
 }
 .services__card:nth-child(4) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/images/homepage/projects.png');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/projects.png');
 }
 
 .services__card h2 {
