--- a/design/experience.css
+++ b/design/experience.css
@@ -430,3 +430,14 @@ body {
   opacity: 1;
   z-index: 1;
 }
+
+.read-more-link {
+  display: inline-block;
+  margin-top: 0.5rem;
+  color: #1d4ed8;
+  text-decoration: underline;
+  font-weight: 500;
+}
+.read-more-link:hover {
+  color: #2563eb;
+}
