--- a/design/styles.css
+++ b/design/styles.css
@@ -357,7 +357,7 @@ section, main, footer {
 }
 
 .services__card:nth-child(1) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/softwareDeveloper.png');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/coding.png');
 }
 .services__card:nth-child(2) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('../images/homepage/UniversityOfAlabama.png');
